# brownfield-cartographer

./: README.md  networkx.py  pydantic.py  pyproject.toml  sitecustomize.py
.cartography/: module_graph.json
brownfield_cartographer/agents/: archivist.py  navigator.py
brownfield_cartographer/analyzers/: sql_lineage.py  tree_sitter_analyzer.py
docs/: INTERIM_DELIVERY.md  README.md  RECONNAISSANCE_TEMPLATE.md
ref/: TRP 1 Challenge Week 4_ The Brownfield Cartographer.docx  TRP1 _ Week4 - Technical Tutorial - Static Analysis & Code Intelligence Tools.pptx
src/: orchestrator.py
src/agents/: semanticist.py
src/analyzers/: dag_config_parser.py
src/brownfield_cartographer/: __init__.py  api.py  cli.py  db.py  orchestrator.py  rag.py  trace.py
src/brownfield_cartographer/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/brownfield_cartographer/analyzers/: dag_config_parser.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/brownfield_cartographer/graph/: knowledge_graph.py
src/brownfield_cartographer/models/: edges.py  evidence_utils.py  nodes.py
tests/: test_cli.py  test_cli_commands.py  test_e2e_jaffle.py  test_hydrologist_agent.py  test_knowledge_graph.py  test_semantic_archivist_navigator.py  test_sql_lineage.py  test_surveyor_agent.py  test_tree_sitter_analyzer.py
typer/: __init__.py  testing.py
ui/: .env.example  index.html  package.json  tailwind.config.cjs
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: cartography.ts  helpers.ts
ui/src/components/: BlastRadiusPanel.tsx  MdViewer.tsx  (+11 more)
(+2 files in other folders)
