[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Static analysis and data lineage cartography for brownfield data engineering repos."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Brownfield Cartographer", email = "devnull@example.com" },
]
license = { text = "MIT" }
dependencies = [
  "typer>=0.9,<1.0",
  "networkx>=3.0,<4.0",
  "pydantic>=2.0,<3.0",
  "sqlglot>=25.0,<26.0",
  "tree-sitter>=0.21,<0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
]
grammars = [
  "tree-sitter-languages>=1.0,<2.0",
]

[project.scripts]
cartography = "brownfield_cartographer.cli:app"
cartography-api = "brownfield_cartographer.api:run"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
